# nix-module-system

./: Cargo.toml  build.rs  flake.nix
crates/nix-module-cli/: Cargo.toml
crates/nix-module-cli/src/: main.rs  nix_eval.rs
crates/nix-module-cli/src/commands/: check.rs  eval.rs  mod.rs  options.rs
crates/nix-module-plugin/: Cargo.toml  build.rs
crates/nix-module-plugin/src/: bridge.rs  ffi.rs  lib.rs  primops.rs  type_resolve.rs
crates/nix-module-system/: Cargo.toml
crates/nix-module-system/benches/: merge.rs  types.rs
crates/nix-module-system/examples/: real_eval_demo.rs
crates/nix-module-system/src/: api.rs  lib.rs
crates/nix-module-system/src/docs/: render.rs
crates/nix-module-system/src/errors/: codes.rs  mod.rs  nix_error.rs  render.rs  span.rs
crates/nix-module-system/src/eval/: collect.rs  mod.rs  pipeline.rs  topo.rs
crates/nix-module-system/src/lsp/: mod.rs  server.rs
crates/nix-module-system/src/merge/: conditional.rs  priority.rs
crates/nix-module-system/src/nix/: convert.rs  error.rs  evaluator.rs  mod.rs  tests.rs
crates/nix-module-system/src/parse/: lexer.rs
crates/nix-module-system/src/types/: base.rs  mod.rs  submodule.rs  traits.rs
crates/nix-module-system/tests/: integration_tests.rs
docs/: DESIGN.md
examples/: real_eval_demo.rs
nix/: lib.nix
nix/examples/: devenv-example.nix  nginx-example.nix  simple-example.nix
nix/modules/: devenv.nix
nix/modules/services/: nginx.nix
src/: api.rs  lib.rs
src/docs/: mod.rs  styles.css
src/errors/: diagnostic.rs  nix_error.rs
src/eval/: mod.rs  pipeline.rs
src/ffi/: mod.rs
src/lsp/: completion.rs  hover.rs  registry.rs
src/merge/: lattice.rs  mod.rs  strategy.rs
src/nix/: convert.rs  error.rs  evaluator.rs  mod.rs  tests.rs
src/parse/: mod.rs  parser.rs
src/types/: compound.rs  submodule.rs
