[package]
name = "nix-module-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Nix module system"
license = "MIT"
repository = "https://github.com/hinshun/nix-module-system"

[[bin]]
name = "nix-module"
path = "src/main.rs"

[dependencies]
# Core library
nix-module-system = { path = "../nix-module-system" }

# Nix bindings for real evaluation
nix-bindings-expr = { git = "https://github.com/nixops4/nix-bindings-rust" }
nix-bindings-store = { git = "https://github.com/nixops4/nix-bindings-rust" }
nix-bindings-util = { git = "https://github.com/nixops4/nix-bindings-rust" }

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Error display (re-use ariadne via the library)
ariadne = "0.4"

# Serialization for output formats
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Collections
indexmap = { version = "2", features = ["serde"] }
