[package]
name = "nix-module-plugin"
version = "0.1.0"
edition = "2021"
description = "Nix plugin for the high-performance module system"
license = "MIT"
repository = "https://github.com/hinshun/nix-module-system"

[lib]
name = "nix_module_plugin"
crate-type = ["cdylib"]

[dependencies]
nix-module-system = { path = "../nix-module-system", default-features = false }
indexmap = { version = "2", features = ["serde"] }
serde_json = "1"

[build-dependencies]
pkg-config = "0.3"
