[package]
name = "nix-module-system"
version = "0.1.0"
edition = "2021"
description = "High-performance Nix module system with Rust primops"
license = "MIT"
repository = "https://github.com/hinshun/nix-module-system"

[lib]
name = "nix_module_system"

[features]
default = ["lsp"]
lsp = ["async-lsp", "tower", "tokio"]

[dependencies]
# Error reporting
ariadne = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Collections
indexmap = { version = "2", features = ["serde"] }
dashmap = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LSP dependencies (optional)
async-lsp = { version = "0.2", optional = true }
tower = { version = "0.5", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
lsp-types = "0.97"

# Async
futures = "0.3"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1"
tempfile = "3"
insta = { version = "1", features = ["yaml"] }

[[bench]]
name = "merge"
harness = false

[[bench]]
name = "types"
harness = false
